--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
   - type: web
-    name: flux-bot
+    name: flux-prompt-bot
     env: python
     plan: free
+    runtime: python-3.10.13
     buildCommand: pip install -r requirements.txt
     startCommand: python bot.py
-    runtime: python-3.10.13
